1. 更新布局文件 2. 优化inmobi逻辑

--- a/adsdk/src/main/res/layout/native_card_mix.xml
+++ b/adsdk/src/main/res/layout/native_card_mix.xml
@@ -159,7 +159,8 @@
                     android:maxLines="3"
                     android:text="detail"
                     android:textColor="@color/secondaryTextColor"
-                    android:textSize="15sp" />
+                    android:textSize="15sp"
+                    android:visibility="gone" />
             </LinearLayout>
 
 
