--- a/adsdk/src/main/res/layout/native_card_large.xml
+++ b/adsdk/src/main/res/layout/native_card_large.xml
@@ -143,7 +143,8 @@
             android:maxLines="3"
             android:text="detail"
             android:textColor="@color/secondaryTextColor"
-            android:textSize="15sp" />
+            android:textSize="15sp"
+            android:visibility="gone" />
 
         <android.support.v7.widget.AppCompatButton
             android:id="@+id/native_action_btn"
