--- a/adsdk/src/main/res/values/ad_styles.xml
+++ b/adsdk/src/main/res/values/ad_styles.xml
@@ -34,4 +34,47 @@
         <item name="android:background">@drawable/ad_button_green_bg</item>
         <item name="android:textColor">@android:color/white</item>
     </style>
+
+    <!--for lock screen-->
+    <style name="AdCMStageTextStyle" parent="@android:style/TextAppearance">
+        <item name="android:textColor">@drawable/ad_cm_text_selector</item>
+        <item name="android:textSize">12sp</item>
+        <item name="android:layout_marginTop">4dp</item>
+        <item name="android:gravity">center</item>
+        <item name="android:layout_gravity">center_horizontal</item>
+    </style>
+
+    <style name="AdCMCompleteStyle">
+        <item name="android:textSize">18sp</item>
+        <item name="android:textColor">@android:color/white</item>
+        <item name="android:gravity">center</item>
+    </style>
+
+    <style name="AdCMTimeStyle" parent="@android:style/TextAppearance">
+        <item name="android:textColor">@android:color/white</item>
+        <item name="android:textSize">20sp</item>
+    </style>
+
+    <style name="AdCMUnitStyle" parent="@android:style/TextAppearance">
+        <item name="android:textColor">@android:color/white</item>
+        <item name="android:textSize">12sp</item>
+    </style>
+
+    <style name="AdCMStageLabelStyle">
+        <item name="android:textSize">10sp</item>
+        <item name="android:textColor">#7fffffff</item>
+        <item name="android:gravity">left|center_vertical</item>
+    </style>
+
+    <style name="AdCMBatteryPercentNum">
+        <item name="android:textSize">60sp</item>
+        <item name="android:textColor">#fff</item>
+        <item name="android:gravity">center_vertical|right</item>
+    </style>
+
+    <style name="AdCMBatteryPercent">
+        <item name="android:textSize">24sp</item>
+        <item name="android:textColor">#fff</item>
+        <item name="android:gravity">top|left</item>
+    </style>
 </resources>
