--- a/adsdk/src/main/res/layout/native_card_large.xml
+++ b/adsdk/src/main/res/layout/native_card_large.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    style="@style/CardStyle"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="#FFFFFFFF">
@@ -160,4 +159,4 @@
             android:paddingRight="20dp"
             android:text="Learn More" />
     </LinearLayout>
-</android.support.v7.widget.CardView>
+</FrameLayout>
