--- a/adsdk/src/main/res/layout/native_card_medium.xml
+++ b/adsdk/src/main/res/layout/native_card_medium.xml
@@ -57,13 +57,14 @@
                 android:layout_height="48dp"
                 android:layout_alignParentLeft="true"
                 android:layout_centerVertical="true"
-                android:contentDescription="@null" />
+                android:layout_marginRight="16dp"
+                android:contentDescription="@null"
+                android:visibility="gone" />
 
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerVertical="true"
-                android:layout_marginLeft="24dp"
                 android:layout_toRightOf="@+id/native_icon"
                 android:gravity="center_vertical"
                 android:orientation="vertical">
