--- a/adsdk/src/main/res/layout/native_card_mix.xml
+++ b/adsdk/src/main/res/layout/native_card_mix.xml
@@ -69,8 +69,8 @@
                     android:layout_width="56dp"
                     android:layout_height="56dp"
                     android:layout_marginBottom="20dp"
-                    android:contentDescription="@null"
-                    android:visibility="visible" />
+                    android:visibility="gone"
+                    android:contentDescription="@null" />
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -97,7 +97,7 @@
                             android:singleLine="true"
                             android:text="Charge Master"
                             android:textColor="@color/primaryTextColor"
-                            android:textSize="28sp" />
+                            android:textSize="24sp" />
 
                         <TextView
                             android:id="@+id/native_sponsored_label"
