--- a/adsdk/src/main/res/layout/native_card_small.xml
+++ b/adsdk/src/main/res/layout/native_card_small.xml
@@ -58,13 +58,14 @@
                 android:layout_height="36dp"
                 android:layout_alignParentLeft="true"
                 android:layout_centerVertical="true"
-                android:contentDescription="@null" />
+                android:layout_marginRight="16dp"
+                android:contentDescription="@null"
+                android:visibility="gone" />
 
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerVertical="true"
-                android:layout_marginLeft="16dp"
                 android:layout_toLeftOf="@+id/native_action_btn"
                 android:layout_toRightOf="@id/native_icon"
                 android:gravity="center_vertical"
@@ -115,9 +116,9 @@
                     android:gravity="left|top"
                     android:singleLine="true"
                     android:text="sub title"
-                    android:visibility="gone"
                     android:textColor="@color/secondaryTextColor"
-                    android:textSize="12sp" />
+                    android:textSize="12sp"
+                    android:visibility="gone" />
 
             </LinearLayout>
 
