--- a/app/src/main/res/layout/ad_common_native_card_small.xml
+++ b/app/src/main/res/layout/ad_common_native_card_small.xml
@@ -50,13 +50,13 @@
                     android:layout_width="0dp"
                     android:layout_height="0dp"
                     android:contentDescription="@null"
+                    android:layout_marginRight="@dimen/dp_10"
                     android:visibility="gone" />
 
                 <LinearLayout
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_vertical"
-                    android:layout_marginLeft="@dimen/dp_10"
                     android:layout_weight="1"
                     android:orientation="vertical">
 
