--- a/adsdk/src/main/res/layout/native_card_cm.xml
+++ b/adsdk/src/main/res/layout/native_card_cm.xml
@@ -1,22 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#00000000">
+    android:background="#44000000">
 
-    <android.support.v7.widget.CardView
+    <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_centerVertical="true"
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
-        android:layout_marginTop="10dp"
-        android:elevation="0dp"
-        card_view:cardCornerRadius="4dp"
-        card_view:cardPreventCornerOverlap="false"
-        card_view:cardUseCompatPadding="true">
+        android:layout_marginTop="10dp">
 
         <LinearLayout
             android:id="@+id/ad_cm_bglayout"
@@ -202,9 +197,9 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="4dp"
                 android:layout_weight="0"
-                android:visibility="gone"
-                android:gravity="center_horizontal|bottom" />
+                android:gravity="center_horizontal|bottom"
+                android:visibility="gone" />
         </LinearLayout>
-    </android.support.v7.widget.CardView>
+    </FrameLayout>
 
 </RelativeLayout>
