--- a/adsdk/src/main/res/layout/native_card_cm.xml
+++ b/adsdk/src/main/res/layout/native_card_cm.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#44000000">
+    android:background="#88000000">
 
     <FrameLayout
         android:layout_width="match_parent"
@@ -17,7 +17,7 @@
             android:id="@+id/ad_cm_bglayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@drawable/ad_cm_bg"
+            android:background="#ff6363f7"
             android:orientation="vertical">
 
             <LinearLayout
