--- a/adsdk/src/main/res/layout/native_card_full.xml
+++ b/adsdk/src/main/res/layout/native_card_full.xml
@@ -10,8 +10,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@android:color/white"
-        android:orientation="vertical"
-        android:paddingBottom="16dp">
+        android:orientation="vertical">
 
         <android.support.percent.PercentRelativeLayout
             android:id="@+id/native_cover_info"
@@ -47,7 +46,7 @@
             android:id="@+id/native_header_info"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_above="@+id/native_action_btn"
+            android:layout_above="@+id/native_action_layout"
             android:layout_below="@+id/native_cover_info"
             android:layout_centerVertical="true"
             android:layout_marginBottom="4dp"
@@ -74,10 +73,9 @@
                 android:gravity="center"
                 android:orientation="vertical">
 
-                <LinearLayout
+                <RelativeLayout
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:gravity="center_vertical">
+                    android:layout_height="wrap_content">
 
                     <TextView
                         android:id="@+id/native_title"
@@ -85,11 +83,15 @@
                         android:layout_height="wrap_content"
                         android:layout_centerHorizontal="true"
                         android:layout_weight="1"
+                        android:layout_marginTop="2dp"
+                        android:maxWidth="240dp"
                         android:ellipsize="marquee"
-                        android:gravity="left|top"
-                        android:singleLine="true"
+                        android:gravity="center"
+                        android:layout_gravity="center_horizontal"
+                        android:singleLine="false"
+                        android:maxLines="2"
                         android:text="Charge Master"
-                        android:textColor="@color/primaryTextColor"
+                        android:textColor="@color/primaryColor"
                         android:textSize="24sp" />
 
                     <TextView
@@ -97,7 +99,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="top"
-                        android:layout_marginLeft="4dp"
+                        android:layout_marginLeft="14dp"
                         android:layout_toRightOf="@+id/native_title"
                         android:layout_weight="0"
                         android:background="@drawable/ad_badge_bg_dark"
@@ -111,7 +113,7 @@
                         android:textColor="@android:color/darker_gray"
                         android:textSize="8sp" />
 
-                </LinearLayout>
+                </RelativeLayout>
 
                 <TextView
                     android:id="@+id/native_sub_title"
@@ -122,7 +124,7 @@
                     android:gravity="center"
                     android:singleLine="true"
                     android:text="sub title"
-                    android:textColor="@color/secondaryTextColor"
+                    android:textColor="@color/secondaryColor"
                     android:textSize="12sp"
                     android:visibility="gone" />
 
@@ -151,25 +153,30 @@
                 android:gravity="center"
                 android:maxLines="3"
                 android:text="detail"
-                android:textColor="@color/secondaryTextColor"
+                android:textColor="@color/secondaryColor"
                 android:textSize="15sp"
                 android:visibility="gone" />
         </LinearLayout>
 
 
-        <android.support.v7.widget.AppCompatButton
-            android:id="@+id/native_action_btn"
-            style="@style/AdButtonFullStyle"
+        <FrameLayout
+            android:id="@+id/native_action_layout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
-            android:layout_gravity="center"
-            android:layout_marginLeft="16dp"
-            android:layout_marginRight="16dp"
-            android:layout_marginTop="15dp"
-            android:paddingLeft="20dp"
-            android:paddingRight="20dp"
-            android:text="Learn More" />
+            android:layout_alignParentBottom="true">
 
+            <android.support.v7.widget.AppCompatButton
+                android:id="@+id/native_action_btn"
+                style="@style/AdButtonFullStyle"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginBottom="16dp"
+                android:layout_marginLeft="16dp"
+                android:layout_marginRight="16dp"
+                android:layout_marginTop="16dp"
+                android:background="@drawable/ad_button_bg"
+                android:text="Learn More" />
+        </FrameLayout>
     </RelativeLayout>
 </FrameLayout>
