--- a/adsdk/src/main/res/layout/native_card_small.xml
+++ b/adsdk/src/main/res/layout/native_card_small.xml
@@ -103,7 +103,7 @@
                         android:gravity="left|top"
                         android:singleLine="true"
                         android:text="Charge Master"
-                        android:textColor="@color/primaryTextColor"
+                        android:textColor="@color/primaryColor"
                         android:textSize="16sp" />
 
                 </RelativeLayout>
@@ -116,7 +116,7 @@
                     android:gravity="left|top"
                     android:singleLine="true"
                     android:text="sub title"
-                    android:textColor="@color/secondaryTextColor"
+                    android:textColor="@color/secondaryColor"
                     android:textSize="12sp"
                     android:visibility="gone" />
 
