--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -84,11 +84,13 @@
                 android:onClick="onClick"
                 android:text="NATIVE通用布局" />
         </LinearLayout>
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="6dp"
             android:orientation="horizontal">
+
             <Button
                 android:id="@+id/show_reward"
                 android:layout_width="match_parent"
@@ -97,6 +99,7 @@
                 android:layout_weight="1"
                 android:onClick="onClick"
                 android:text="展示激励视频" />
+
             <Button
                 android:id="@+id/reward_count"
                 android:layout_width="match_parent"
@@ -105,6 +108,23 @@
                 android:layout_weight="1"
                 android:text="0" />
         </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="6dp"
+            android:orientation="horizontal">
+
+            <Button
+                android:id="@+id/show_listview_ad"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="2dp"
+                android:layout_weight="1"
+                android:onClick="onClick"
+                android:text="展示列表中的广告" />
+        </LinearLayout>
+
         <RelativeLayout
             android:id="@+id/native_banner_layout"
             android:layout_width="match_parent"
