--- a/adsdk/src/main/res/layout/native_card_mix.xml
+++ b/adsdk/src/main/res/layout/native_card_mix.xml
@@ -137,10 +137,10 @@
 
                     <TextView
                         android:id="@+id/native_social"
-                        android:layout_width="match_parent"
+                        android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:ellipsize="marquee"
-                        android:gravity="left|top"
+                        android:gravity="center"
                         android:singleLine="true"
                         android:textColor="@android:color/darker_gray"
                         android:textSize="12sp"
