1. 优化fb原生布局

--- a/adsdk/src/main/res/layout/native_card_full.xml
+++ b/adsdk/src/main/res/layout/native_card_full.xml
@@ -81,14 +81,16 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_centerHorizontal="true"
-                        android:layout_weight="1"
+                        android:layout_gravity="center_horizontal"
                         android:layout_marginTop="2dp"
-                        android:maxWidth="240dp"
+                        android:layout_weight="1"
                         android:ellipsize="marquee"
                         android:gravity="center"
-                        android:layout_gravity="center_horizontal"
-                        android:singleLine="false"
                         android:maxLines="2"
+                        android:maxWidth="240dp"
+                        android:paddingLeft="4dp"
+                        android:paddingRight="4dp"
+                        android:singleLine="false"
                         android:text="Charge Master"
                         android:textColor="@color/primaryColor"
                         android:textSize="24sp" />
