--- a/adsdk/src/main/res/layout/native_card_full.xml
+++ b/adsdk/src/main/res/layout/native_card_full.xml
@@ -160,11 +160,27 @@
         </LinearLayout>
 
 
-        <FrameLayout
+        <LinearLayout
             android:id="@+id/native_action_layout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true">
+            android:layout_alignParentBottom="true"
+            android:orientation="horizontal">
+
+            <android.support.v7.widget.AppCompatButton
+                android:id="@+id/native_cancel_btn"
+                style="@style/AdButtonFullStyle"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_weight="1"
+                android:layout_marginBottom="16dp"
+                android:layout_marginLeft="16dp"
+                android:layout_marginRight="8dp"
+                android:layout_marginTop="16dp"
+                android:textColor="@android:color/darker_gray"
+                android:background="@drawable/ad_close_button_bg"
+                android:text="@android:string/cancel" />
 
             <android.support.v7.widget.AppCompatButton
                 android:id="@+id/native_action_btn"
@@ -172,12 +188,13 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
+                android:layout_weight="1"
                 android:layout_marginBottom="16dp"
-                android:layout_marginLeft="16dp"
+                android:layout_marginLeft="8dp"
                 android:layout_marginRight="16dp"
                 android:layout_marginTop="16dp"
-                android:background="@drawable/ad_button_bg"
+                android:background="@drawable/ad_action_button_bg"
                 android:text="Learn More" />
-        </FrameLayout>
+        </LinearLayout>
     </RelativeLayout>
 </FrameLayout>
