1. 文件重命名

--- a/adsdk/src/main/res/layout/had_card_mix.xml
+++ b/adsdk/src/main/res/layout/had_card_mix.xml
@@ -49,7 +49,7 @@
             android:layout_marginLeft="20dp"
             android:layout_marginRight="20dp"
             android:layout_marginTop="8dp"
-            android:background="@drawable/ad_body_bg">
+            android:background="@drawable/had_body_bg">
 
             <LinearLayout
                 android:id="@+id/native_header_info"
@@ -111,7 +111,7 @@
                             android:layout_marginLeft="14dp"
                             android:layout_toRightOf="@+id/native_title"
                             android:layout_weight="0"
-                            android:background="@drawable/ad_badge_bg_dark"
+                            android:background="@drawable/had_badge_bg_dark"
                             android:gravity="center"
                             android:paddingBottom="2dp"
                             android:paddingLeft="4dp"
@@ -186,7 +186,7 @@
                     android:layout_marginRight="8dp"
                     android:layout_marginTop="16dp"
                     android:layout_weight="1"
-                    android:background="@drawable/ad_action_button_bg"
+                    android:background="@drawable/had_action_button_bg"
                     android:text="Learn More" />
 
                 <android.support.v7.widget.AppCompatButton
@@ -200,7 +200,7 @@
                     android:layout_marginRight="16dp"
                     android:layout_marginTop="16dp"
                     android:layout_weight="1"
-                    android:background="@drawable/ad_close_button_bg"
+                    android:background="@drawable/had_close_button_bg"
                     android:text="@android:string/cancel"
                     android:textColor="@android:color/darker_gray" />
 
