--- a/adsdk/src/main/res/layout/had_card_large.xml
+++ b/adsdk/src/main/res/layout/had_card_large.xml
@@ -2,9 +2,10 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:background="#FFFFFFFF">
 
-    <RelativeLayout
+    <LinearLayout
         android:id="@+id/native_native_ad_unit"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -45,46 +46,40 @@
             android:id="@+id/native_header_info"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/native_cover_info"
-            android:orientation="horizontal"
-            android:paddingBottom="4dp"
-            android:paddingLeft="6dp"
-            android:paddingRight="6dp"
-            android:paddingTop="4dp">
+            android:layout_marginBottom="4dp"
+            android:layout_marginLeft="16dp"
+            android:layout_marginRight="16dp"
+            android:layout_marginTop="8dp"
+            android:orientation="horizontal">
 
             <ImageView
                 android:id="@+id/native_icon"
-                android:layout_width="36dp"
-                android:layout_height="36dp"
-                android:layout_alignParentLeft="true"
-                android:layout_centerVertical="true"
-                android:layout_marginRight="16dp"
-                android:contentDescription="@null"
-                android:visibility="gone" />
+                android:layout_width="48dp"
+                android:layout_height="48dp"
+                android:visibility="gone"
+                android:layout_centerHorizontal="true"
+                android:contentDescription="@null" />
 
             <LinearLayout
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_centerVertical="true"
-                android:layout_toLeftOf="@+id/native_action_btn"
-                android:layout_toRightOf="@id/native_icon"
+                android:layout_below="@+id/native_icon"
+                android:layout_centerHorizontal="true"
+                android:layout_marginTop="10dp"
                 android:gravity="center_vertical"
                 android:orientation="vertical">
 
                 <RelativeLayout
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:gravity="left">
+                    android:layout_height="wrap_content">
 
                     <TextView
                         android:id="@+id/native_sponsored_label"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_alignParentRight="true"
-                        android:layout_centerVertical="true"
                         android:layout_marginLeft="4dp"
-                        android:layout_marginRight="4dp"
-                        android:background="@drawable/ad_badge_bg_dark"
+                        android:layout_toRightOf="@+id/native_title"
+                        android:background="@drawable/had_badge_bg_dark"
                         android:gravity="center"
                         android:paddingBottom="2dp"
                         android:paddingLeft="4dp"
@@ -98,37 +93,71 @@
                         android:id="@+id/native_title"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_toLeftOf="@+id/native_sponsored_label"
+                        android:layout_centerHorizontal="true"
                         android:ellipsize="marquee"
                         android:gravity="left|top"
                         android:singleLine="true"
                         android:text="Charge Master"
                         android:textColor="@color/primaryColor"
-                        android:textSize="16sp" />
+                        android:textSize="18sp" />
 
                 </RelativeLayout>
 
                 <TextView
                     android:id="@+id/native_sub_title"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:ellipsize="marquee"
+                    android:layout_gravity="center_horizontal"
+                    android:gravity="center"
+                    android:singleLine="true"
+                    android:textColor="@color/secondaryColor"
+                    android:textSize="12sp"
+                    android:visibility="gone" />
+
+                <TextView
+                    android:id="@+id/native_social"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:ellipsize="marquee"
-                    android:gravity="left|top"
+                    android:gravity="center"
                     android:singleLine="true"
-                    android:text="sub title"
-                    android:textColor="@color/secondaryColor"
+                    android:textColor="@android:color/darker_gray"
                     android:textSize="12sp"
                     android:visibility="gone" />
 
             </LinearLayout>
 
-            <android.support.v7.widget.AppCompatButton
-                android:id="@+id/native_action_btn"
-                style="@style/AdButtonStyle"
-                android:layout_width="wrap_content"
-                android:layout_height="36dp"
-                android:layout_marginLeft="16dp"
-                android:text="Learn More" />
         </RelativeLayout>
-    </RelativeLayout>
+
+        <TextView
+            android:id="@+id/native_detail"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="16dp"
+            android:layout_marginLeft="16dp"
+            android:layout_marginRight="16dp"
+            android:layout_marginTop="5dp"
+            android:ellipsize="marquee"
+            android:gravity="center"
+            android:maxLines="3"
+            android:text="detail"
+            android:textColor="@color/secondaryColor"
+            android:textSize="15sp"
+            android:visibility="gone" />
+
+        <android.support.v7.widget.AppCompatButton
+            android:id="@+id/native_action_btn"
+            style="@style/AdButtonLargeStyle"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginBottom="16dp"
+            android:layout_marginLeft="16dp"
+            android:layout_marginRight="16dp"
+            android:layout_marginTop="16dp"
+            android:paddingLeft="20dp"
+            android:paddingRight="20dp"
+            android:text="Learn More" />
+    </LinearLayout>
 </FrameLayout>
