--- a/adsdk/src/main/res/layout/cpu_card_0.xml
+++ b/adsdk/src/main/res/layout/cpu_card_0.xml
@@ -84,7 +84,7 @@
                         android:layout_centerVertical="true"
                         android:layout_marginLeft="4dp"
                         android:layout_marginRight="4dp"
-                        android:background="@drawable/ad_badge_bg_dark"
+                        android:background="@drawable/cad_badge_bg_dark"
                         android:gravity="center"
                         android:paddingBottom="2dp"
                         android:paddingLeft="4dp"
@@ -124,7 +124,7 @@
 
             <android.support.v7.widget.AppCompatButton
                 android:id="@+id/native_action_btn"
-                style="@style/AdButtonStyle"
+                style="@style/CAdButtonStyle"
                 android:layout_width="wrap_content"
                 android:layout_height="36dp"
                 android:layout_marginLeft="16dp"
