--- a/adsdk/src/main/res/values/cad_styles.xml
+++ b/adsdk/src/main/res/values/cad_styles.xml
@@ -1,6 +1,6 @@
 <resources>
 
-    <style name="CardStyle">
+    <style name="CAdCardStyle">
         <item name="cardCornerRadius">2dp</item>
         <item name="cardElevation">1dp</item>
         <item name="contentPadding">0dp</item>
@@ -8,43 +8,43 @@
         <item name="cardUseCompatPadding">true</item>
     </style>
 
-    <style name="AdButtonStyle" parent="Base.Widget.AppCompat.Button.Colored">
+    <style name="CAdButtonStyle" parent="Base.Widget.AppCompat.Button.Colored">
         <item name="android:layout_alignParentRight">true</item>
         <item name="android:layout_centerVertical">true</item>
         <item name="android:layout_height">36dp</item>
         <item name="android:textSize">13sp</item>
         <item name="android:textStyle">bold</item>
-        <item name="android:background">@drawable/ad_button_bg</item>
+        <item name="android:background">@drawable/cad_button_bg</item>
         <item name="android:textColor">@android:color/white</item>
     </style>
 
-    <style name="AdButtonLargeStyle" parent="Base.Widget.AppCompat.Button.Colored">
+    <style name="CAdButtonLargeStyle" parent="Base.Widget.AppCompat.Button.Colored">
         <item name="android:layout_alignParentRight">true</item>
         <item name="android:layout_centerVertical">true</item>
         <item name="android:layout_height">36dp</item>
         <item name="android:textSize">13sp</item>
         <item name="android:textStyle">bold</item>
-        <item name="android:background">@drawable/ad_button_bg</item>
+        <item name="android:background">@drawable/cad_button_bg</item>
         <item name="android:textColor">@android:color/white</item>
     </style>
-    <style name="AdButtonFullStyle" parent="Base.Widget.AppCompat.Button.Colored">
+    <style name="CAdButtonFullStyle" parent="Base.Widget.AppCompat.Button.Colored">
         <item name="android:layout_height">36dp</item>
         <item name="android:textSize">13sp</item>
         <item name="android:textStyle">bold</item>
-        <item name="android:background">@drawable/ad_button_green_bg</item>
+        <item name="android:background">@drawable/cad_button_green_bg</item>
         <item name="android:textColor">@android:color/white</item>
     </style>
 
     <!--for lock screen-->
-    <style name="AdCMStageTextStyle" parent="@android:style/TextAppearance">
-        <item name="android:textColor">@drawable/ad_cm_text_selector</item>
+    <style name="CAdCMStageTextStyle" parent="@android:style/TextAppearance">
+        <item name="android:textColor">@drawable/cad_cm_text_selector</item>
         <item name="android:textSize">12sp</item>
         <item name="android:layout_marginTop">4dp</item>
         <item name="android:gravity">center</item>
         <item name="android:layout_gravity">center_horizontal</item>
     </style>
 
-    <style name="AdCMCompleteStyle">
+    <style name="CAdCMCompleteStyle">
         <item name="android:textSize">18sp</item>
         <item name="android:textColor">@android:color/white</item>
         <item name="android:gravity">center</item>
